# FastRTC-Template

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/api/: app.py  routes.py
src/config/: __init__.py  prompts.py  settings.py
src/core/: __init__.py  handler.py  stream.py
src/ui/: __init__.py  gradio_app.py
static/: index.html
