[project]
name = "fastrtc-template"
version = "0.1.0"
description = "FastRTC template with OpenAI Realtime API integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastrtc[vad]>=0.0.22",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.58.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "gradio>=5.0.0",
]

[tool.uv]
dev-dependencies = []
